Moved about section to separate HTML file for easier formatting, created new CSS file for about website

--- a/main.css
+++ b/main.css
@@ -9,9 +9,21 @@ header {
 }
 
 main {
+    display: flex;
+    flex: 1;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+.login {
+    flex: 1;
+}
+
+nav {
     flex: 3;
 }
 
 footer {
-    flex: 0 100px;
+    flex: 0;
 }
