Finished styling for login block, including button styling, added br between buttons and input elements, and text color

--- a/main.css
+++ b/main.css
@@ -22,6 +22,12 @@ main {
 #login {
     flex: 1;
     flex-direction: column;
+    background-color:slategray;
+    align-content: center;
+}
+
+#signup {
+  background-color: lightgray;
 }
 
 #tower_heading {
