--- a/main.css
+++ b/main.css
@@ -2,6 +2,8 @@ body {
     display: flex;
     flex-direction: column;
     min-width: 400px;
+    background-color: #212529;
+    color: #f8f9fa;
 }
 
 header {
