--- a/tower.css
+++ b/tower.css
@@ -13,6 +13,15 @@
     border-width: 0 0 0 0;
 }
 
+.websocket {
+    flex: 1;
+    background-color: rgb(72, 88, 104);
+    border-radius: 10px;
+    margin-top: 10em;
+    margin-bottom: 10em;
+    margin-right: 1em;
+}
+
 .upgrade_table_container {
     flex: 4;
     display: flex;
