--- a/src/tower.css
+++ b/src/tower.css
@@ -95,6 +95,10 @@ th:nth-child(5), td:nth-child(5) {
     width: 175px;
 }
 
+th:nth-child(6), td:nth-child(6) {
+    width: 250px;
+}
+
 .change_cell {
     text-align: left;
 }
