--- a/src/tower.css
+++ b/src/tower.css
@@ -15,6 +15,7 @@
 
 .websocket {
     flex: 1;
+    min-width: 150px;
     background-color: rgb(72, 88, 104);
     border-radius: 10px;
     margin-top: 10em;
@@ -22,6 +23,7 @@
     margin-right: 1em;
     padding: 10px;
     height: 300px;
+    overflow-y: scroll;
 }
 
 .upgrade_table_container {
@@ -76,7 +78,7 @@ th, td {
 }
 
 th:nth-child(1), td:nth-child(1) {
-    width: 100px;
+    width: 125px;
 }
 
 th:nth-child(2), td:nth-child(2) {
