Added styling class tags to super/tack; filled in changes table cells. Also darkened text color of links in home page for better readability

--- a/src/app.css
+++ b/src/app.css
@@ -97,11 +97,11 @@ li {
 }
 
 nav .a:link{
-  color: dimgray;
+  color: rgb(65, 65, 65);
 }
 
 nav .a:visited {
-  color: dimgray;
+  color: rgb(65, 65, 65);
 }
 
 nav .a:hover {
