--- a/src/tower.css
+++ b/src/tower.css
@@ -17,6 +17,7 @@
     flex: 1;
     min-width: 150px;
     background-color: rgb(72, 88, 104);
+    color: #f8f9fa;
     border-radius: 10px;
     margin-top: 10em;
     margin-bottom: 10em;
